# automac

./: .gitignore  LICENSE.md  Makefile.am  README.md  configure.ac  create-cli.sh
.github/workflows/: main.yml
docs/: automac.1  automac.1.md  osacli.1.md
samples/: export-folder-from-notes-to-html.sh  export-note-to-html.sh  export-notes-to-html.sh  safari-tabs-as-markdown.sh  save-safari-tabs-to-notes-via-markdown.sh  save-safari-tabs-to-notes.sh  save-safari-tabs-to-sqlite.sh
src/: init.js
src/debug/: echo.js  index.js
src/notes/: create.js  delete.js  get-attachment-file-by-id.js  get-by-id.js  index.js  list-folder-by-id.js  list.js  update-by-id.js
src/safari/: close-tab.js  close-window.js  get-tab-source.js  index.js  list-tabs-by-window-id.js  list-tabs.js  list-windows.js  open-tab.js  open-window.js
tests/: debug.sh  notes.sh  safari.sh
